# kratocz

./: .gitignore  AGENTS.md  CLAUDE.md  CNAME  README.md  dev  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-to-ghpages.yml  deploy.yml
docs/: index.md
docs/assets/: common.css
docs/assets/Petr-Kratochvil/: krato.cz.vcf
docs/cs/: cv-full.md  cv.md  kurzy.md
docs/en/: cv-full.md  cv-old-2025-11-30.md  cv.md  krato.cz.vcf
docs/pl/: cv-full.md  cv.md
github/workflows/: deploy.yml
overrides/: 404.html
